Implement /readyz for checking connection with database
